--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "export": "next export"
   },
   "dependencies": {
+    "leaflet": "^1.7.1",
     "next": "10.0.6",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "sass": "^1.32.7"
   }
 }
