--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "leaflet": "^1.7.1",
+    "mongodb": "^4.0.1",
     "next": "10.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
